# QRMEET

./: README.md  pyproject.toml  pytest.ini  send_socket.py
app/: main.py
app/api/: meetings.py
app/core/: config.py
app/db/: session.py
app/models/: meeting.py
app/schemas/: meeting_schema.py
app/services/: meeting_service.py
app/templates/: meeting_form.html
app/tests/: test_meeting.py
app/utils/: logger.py
